Fix AllTesst